2006-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	* src/analyze.c (build_reverse_script): Fix typo in comment.
	Problem and fix reported by Daniel Hipschman.

2006-11-14  Paul Eggert  <eggert@cs.ucla.edu>

	Don't assume SIGPIPE exists, and that sigblock and sigsetmask
	exist if sigprocmask does not.  Problem reported by Paul Edwards
	for MVS 3.8.
	* configure.ac (sigblock): Check whether this function is
	available, if sigprocmask is not.
	* src/sdiff.c (sigs): Omit SIGPIPE if it's not defined.
	Put SIGINT last; all uses changed.
	(handler_index_of_SIGPIPE): Omit if SIGPIPE is not defined.
	(sigblock, sigsetmask) [!HAVE_SIGBLOCK]: New macros.
	(sigprocmask): Don't dump core if O is null.

2006-11-04  Paul Eggert  <eggert@cs.ucla.edu>

	* src/sdiff.c (sigprocmask) [! HAVE_SIGPROCMASK]: Cast 2nd arg to
	sigset_t *, since it might be a literal 0.  Problem reported by
	Paul Edwards for MVS 3.8.

2006-09-05  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: diff -u no longer outputs trailing white space unless the
	input data has it.  Suggested by Jim Meyering.
	* doc/diff.texi (Detailed Unified): Document this.
	* src/context.c (pr_unidiff_hunk): Implement this.

	Modernize bootstrap procedure to match current gnulib.
	* bootstrap: Sync with coreutils bootstrap, except check that
	the directory build-aux exists before trying to copy to it.
	* bootstrap.conf: New file.
	(gnulib_modules): Add config-h, dup2, extensions, fcntl, fdl,
	stat-macros, unistd.
	* configure.ac: Invoke gl_EARLY and gl_INIT rather than
	GNULIB_AUTOCONF_SNIPPET.
	(AC_CONFIG_HEADER): Rename config.h to lib/config.h.
	(AC_CHECK_HEADERS_ONCE): Don't check for fcntl.h, locale.h,
	sys/file.h, unistd.h.  We now use the fcntl and unistd modules,
	and locale.h can be assumed for any C89 compiler.
	(DIFFUTILS_PREREQUISITES): Remove.  No longer needed now that
	we use the stdint module.
	(AC_CHECK_FUNCS_ONCE): Remove dup2, which is no longer needed
	now that we use the dup2 module.