@@ -1,7 +1,7 @@
 /* cmp - compare two files byte by byte
 
    Copyright (C) 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1998, 2001,
-   2002, 2004, 2006 Free Software Foundation, Inc.
+   2002, 2004, 2006, 2007 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -26,7 +26,6 @@
 #include <c-stack.h>
 #include <cmpbuf.h>
 #include <error.h>
-#include <exit.h>
 #include <exitfail.h>
 #include <file-type.h>
 #include <getopt.h>
