@@ -1,7 +1,7 @@
 /* diff - compare files line by line
 
    Copyright (C) 1988, 1989, 1992, 1993, 1994, 1996, 1998, 2001, 2002,
-   2004, 2006 Free Software Foundation, Inc.
+   2004, 2006, 2007 Free Software Foundation, Inc.
 
    This file is part of GNU DIFF.
 
@@ -27,7 +27,6 @@
 #include <dirname.h>
 #include <error.h>
 #include <exclude.h>
-#include <exit.h>
 #include <exitfail.h>
 #include <file-type.h>
 #include <fnmatch.h>
