@@ -1,7 +1,7 @@
 /* sdiff - side-by-side merge of file differences
 
    Copyright (C) 1992, 1993, 1994, 1995, 1996, 1998, 2001, 2002, 2004,
-   2006 Free Software Foundation, Inc.
+   2006, 2007 Free Software Foundation, Inc.
 
    This file is part of GNU DIFF.
 
@@ -29,7 +29,6 @@
 #include <c-stack.h>
 #include <dirname.h>
 #include <error.h>
-#include <exit.h>
 #include <exitfail.h>
 #include <file-type.h>
 #include <getopt.h>
